<resources>
    <string name="app_name">Inventory App</string>

    <!-- Empty View for Inventory List -->
    <string name="empty_view_title_text">Out of stock</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding inventory</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_stock">Stock</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for description in the editor [CHAR LIMIT=30] -->
    <string name="category_description">Description</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for stock field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_stock">Stock</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price</string>

    <!-- Units for price of the item ($) [CHAR LIMIT=5] -->
    <string name="unit_item_price">$</string>

    <!-- Label for inserting dummy data from Catalog menu -->
    <string name="action_insert_dummy_data">Insert dummy data</string>

    <!-- Label for inserting dummy data from Catalog menu -->
    <string name="action_delete_all_data">Delete all data</string>

    <!-- Label for saving in the Editor -->
    <string name="action_save">Save</string>

    <!-- Label for deleting a single entry from Editor -->
    <string name="action_delete">Delete</string>

    <!-- Text for if inserting an Item fails -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Text for if inserting an Item is successful -->
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_activity_title_new_item">Add item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="unsaved_changes_dialog_msg">There are unsaved changes</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_failed">Failed to delete item</string>
    <string name="editor_delete_item_successful">Item was deleted successfully</string>
</resources>
